# Haskell-NSSpeechRecognizer

./: .gitignore  NSSpeechRecognizer.cabal  README.md  stack.yaml
executables/: Main.hs
native/: NSSpeechRecognizer.h  NSSpeechRecognizer.m  Recognizer.h  Recognizer.m
sources/: NSSpeechRecognizer.hs
sources/NSSpeechRecognizer/: Bindings.hs  Constants.hs  Example.hs  Extra.hs  Foreign.hs  Main.hs  Types.hs  Utilities.hs
tests/: DocTest.hs
tests/NSSpeechRecognizer/: Test.hs
