name:                NSSpeechRecognizer
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/NSSpeechRecognizer#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sboosali/NSSpeechRecognizer


library
 if !os(osx)
     buildable: False

 hs-source-dirs:      sources
 default-language:    Haskell2010
 default-extensions:
   AutoDeriveTypeable, DeriveDataTypeable, DeriveGeneric,
   LambdaCase

 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors

 c-sources:        native/NSSpeechRecognizer.m
 includes:         native/NSSpeechRecognizer.h
 install-includes: native/NSSpeechRecognizer.h
 include-dirs:     native

 cc-options: -fno-objc-arc
 -- we manually manage memory, with 'ForeignPtr';
 -- we don't want the ObjC runtime to "autorelease" objects
 -- that are still live in the eyes of the GHC runtime.
 -- (don't know if necessary).
 ld-options: -ObjC
 frameworks: Cocoa

 exposed-modules:
  NSSpeechRecognizer
  NSSpeechRecognizer.Types
  NSSpeechRecognizer.Bindings
  NSSpeechRecognizer.Foreign

-- other-modules:
  NSSpeechRecognizer.Example
  NSSpeechRecognizer.Extra

 build-depends:
    base >=4.7 && <5

  , stm

  , data-default-class

-- $ stack build && stack exec -- NSSpeechRecognizer-example
executable NSSpeechRecognizer-example
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , NSSpeechRecognizer


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , NSSpeechRecognizer
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  NSSpeechRecognizer.Test

 build-depends:
    base
  , NSSpeechRecognizer
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck
